# grocerlo

./: .gitignore  LOOP_LOG.md  LOOP_STATE.md  LOOP_TASKS.md  PRICE_COMPARISON_APP_PLAN.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260627_0001_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  comparison.py  products.py
backend/app/db/: __init__.py  base.py  comparison.py  product_search.py  retailer_products.py
backend/app/matching/: __init__.py  reconciliation.py  rule_based.py
backend/app/models/: __init__.py  scraping.py
backend/app/normalization/: __init__.py  retailer_products.py
backend/app/quality/: __init__.py  raw_products.py
backend/app/scrapers/: __init__.py  base.py  billa.py  mpreis.py  rewe.py
backend/grocery_saver_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_billa_full_ingest.py  test_check_pr_review_status.py  test_comparison_api.py  test_linear_review_metadata.py  test_mpreis_report_only_normalization.py  test_mpreis_scraper.py  test_normalization.py  test_product_search_api.py  test_raw_product_quality.py  test_reconciliation.py  test_rewe_scraper.py  test_rule_based_matching.py  test_scrape_once.py  test_stored_data_sanity_report.py
backend/tests/fixtures/: linear_review_issue_passed.json
docs/: LOOP_ENGINEERING.md  linear-review-gate-migration.md  retailer-discovery-checklist.md  retailer-ingest-runbook.md  retailer-policy-decisions.md
frontend/: README.md  (+3 more)
(+22 files in other folders)
